DDF-4550 Fix overflow of search title placeholder (#4551)
 - In comfortable mode the search title placeholder wouldn't completely show due to the large amount of padding.

--- a/ui/packages/catalog-ui-search/src/main/webapp/component/query-title/query-title.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/query-title/query-title.less
@@ -12,7 +12,7 @@
     vertical-align: top;
     height: ~'calc(100% - 2px)';
     text-align: center;
-    padding: 0px 3 * @minimumButtonSize;
+    padding: 0px 2.5 * @minimumButtonSize;
   }
 
   input.query-title {
